add the signup- login functionalities , and delete admin(Y/N)

--- a/car_rental/app/views/users/index.html.erb
+++ b/car_rental/app/views/users/index.html.erb
@@ -154,12 +154,8 @@
               <div class="username">
                 <input type="date" name ="user[dob]" id= "dob" placeholder="Date-Of-Birth- YYYY-MM-DD">
               </div>
-              <div class="username"> Age
+              <div class="username">
                 <input type="number" name ="user[age]" id= "age" placeholder="Age">
-
-              </div>
-              <div class="username"> Admin (Y/N)
-                <input type="checkbox" name ="user[admin]" id= "admin" placeholder="Admin">
               </div>
               <div class="username">
                 <input type="text" name ="user[user_name]" id= "username" placeholder="Username">
