--- a/car_rental/app/views/cars/index.html.erb
+++ b/car_rental/app/views/cars/index.html.erb
@@ -40,7 +40,9 @@
               <div class="col-lg-6 col-md-6">
                 <div class="single-car-wrap">
                   <div class="car-list-thumb ">
-                    <%=image_tag(@cars[i].image) %>
+                    <% if @cars[i].image.attached? %>
+                     <%=image_tag(@cars[i].image) %>
+                    <%end %>
                   </div>
                   <br>
                   <div class="car-list-info without-bar">
@@ -75,13 +77,15 @@
                         <%= link_to 'Details', @cars[i], class: "rent-btn" %>
                       </div>
                       <div class="col-sm-1"></div>
-                      <div class="col-sm-2">
-                        <%= link_to 'Edit', edit_car_path(@cars[i]), class: "rent-btn" %>
-                      </div>
-                      <div class="col-sm-1"></div>
-                      <div class="col-sm-2">
-                        <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
-                      </div>
+                      <%if logged_in? && current_user.admin?%>
+                        <div class="col-sm-2">
+                          <%= link_to 'Edit', edit_car_path(@cars[i]), class: "rent-btn" %>
+                        </div>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-2">
+                          <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
+                        </div>
+                      <%end %>
                     </div>
                   </div>
                 </div>
@@ -93,7 +97,9 @@
                 <div class="col-lg-6 col-md-6">
                   <div class="single-car-wrap">
                     <div class="car-list-thumb">
-                      <%=image_tag(@cars[i].image) %>
+                      <% if @cars[i].image.attached? %>
+                        <%=image_tag(@cars[i].image) %>
+                      <%end %>
                     </div>
                     <br>
                     <div class="car-list-info without-bar">
@@ -128,13 +134,15 @@
                           <%= link_to 'Details', @cars[i], class: "rent-btn" %>
                         </div>
                         <div class="col-sm-1"></div>
-                        <div class="col-sm-2">
-                          <%= link_to 'Edit', edit_car_path(@cars[i]), class: "rent-btn" %>
-                        </div>
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-2">
-                          <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
-                        </div>
+                        <%if logged_in? && current_user.admin?%>
+                          <div class="col-sm-2">
+                            <%= link_to 'Edit', edit_car_path(@cars[i]), class: "rent-btn" %>
+                          </div>
+                          <div class="col-sm-1"></div>
+                          <div class="col-sm-2">
+                            <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
+                          </div>
+                        <%end %>
                       </div>
                     </div>
                   </div>
