--- a/car_rental/app/views/users/_form.html.erb
+++ b/car_rental/app/views/users/_form.html.erb
@@ -1,62 +1,47 @@
+<%= render 'shared/errors', object:@user %>
+
 <%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-        <% user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+  <div class="field">
+    <%= form.text_field :user_name , class: "form-control",  autofocus: true, placeholder: "Username"%>
+  </div>
+
+  <div class="field">
+    <%= form.password_field :password, class: "form-control",  autofocus: true, placeholder: "Password"  %>
+  </div>
+
+  <div class="field">
+    <%= form.text_field :email,class: "form-control",  autofocus: true, placeholder: "Email" %>
+  </div>
+
+  <div class="field">
+    <%= form.text_field :name ,class: "form-control",  autofocus: true, placeholder: "Name" %>
+  </div>
+
+  <div class="field">
+    <%= form.text_field :address ,class: "form-control",  autofocus: true, placeholder: "Address" %>
+  </div>
+
+  <div class="field">
+    <%= form.date_select :dob ,class:"form-control",  autofocus: true, placeholder: "Data of birth" %>
+  </div>
+
+    <div class="field">
+      <%= form.number_field :age ,class:"form-control",  autofocus: true, placeholder: "Age is 18+" %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :user_name %>
-    <%= form.text_field :user_name %>
+    <div class="field">
+      <%= form.number_field :points ,class:"form-control",  autofocus: true, placeholder: "Points" %>
+    </div>
+
+  <div class="row">
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-6">
+      <div class="log-btn">
+        <%= form.submit "Done",class: "btn" %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.text_field :password %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :dob %>
-    <%= form.date_select :dob %>
-  </div>
-
-  <div class="field">
-    <%= form.label :age %>
-    <%= form.number_field :age %>
-  </div>
-
-  <div class="field">
-    <%= form.label :points %>
-    <%= form.number_field :points %>
-  </div>
-
-  <div class="field">
-    <%= form.label :admin %>
-    <%= form.check_box :admin %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
