--- a/car_rental/app/views/users/my_rented.html.erb
+++ b/car_rental/app/views/users/my_rented.html.erb
@@ -6,7 +6,7 @@
       <!-- Page Title Start -->
       <div class="col-lg-12">
         <div class="section-title  text-center">
-          <h2>Favourite</h2>
+          <h2>Rents</h2>
           <span class="title-line"><i class="fa fa-car"></i></span>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
@@ -22,8 +22,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <% if @saved_cars.size > 0 %>
-          <% @saved_cars.each do |car| %>
+        <% if @rented_cars.size > 0 %>
+          <% @rented_cars.each do |car| %>
             <div class="row">
               <!-- Car List Content Start -->
 
@@ -35,10 +35,10 @@
                     <!-- Single Car Thumbnail -->
                     <div class="col-lg-5">
                       <div class="car-list-thumb">
-                      <!--car image-->
-                      <% if car.image.attached? %>
-                        <%= link_to image_tag(car.image), car_path(car) %>
-                      <% end %>
+                        <!--car image-->
+                        <% if car.image.attached? %>
+                          <%= link_to image_tag(car.image), car_path(car) %>
+                        <% end %>
                       </div>
                     </div>
                     <!-- Single Car Thumbnail -->
@@ -67,7 +67,7 @@
                               <i class="fa fa-star unmark"></i>
                             </p>
                             <!--to delete the recipe from the saved-->
-                            <%= link_to "Unsave", saved_car_path(car), method: :delete, class: "rent-btn" %>
+                            <%= link_to "Cancel", rented_car_path(car), method: :delete, class: "rent-btn" %>
                           </div>
                         </div>
                       </div>
@@ -190,7 +190,7 @@
                       <div class="four">V</div>
                     </div>
                     <h4>NO CARS !</h4>
-                    <p>SORRY, YOU DON'T HAVE CARS IN FAVOURITE <br> PLEASE, ADD SOME.</p>
+                    <p>SORRY, YOU DON'T HAVE CARS IN RENT <br> PLEASE, RENT SOME.</p>
                     <%= link_to ' Go to Home', root_path, class: "fa fa-home btn-404-home" %>
                   </div>
                 </div>
@@ -199,11 +199,4 @@
           </section>
 
         <% end %>
-
-
         </body>
-
-
-
-
-
