--- a/car_rental/app/views/cars/search.html.erb
+++ b/car_rental/app/views/cars/search.html.erb
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
+<h1>Search Results</h1>
 
-<head>
-  <title>Catalogue</title>
-</head>
-
-<body class="loader-active">
-
-<!--== Page Title Area Start ==-->
-<section id="page-title-area" class="section-padding overlay">
-  <div class="container">
-    <div class="row">
-      <!-- Page Title Start -->
-      <div class="col-lg-12">
-        <div class="section-title  text-center">
-          <h2>Our Cars</h2>
-          <span class="title-line"><i class="fa fa-car"></i></span>
-          <p>We are here for you.</p>
-        </div>
-      </div>
-      <!-- Page Title End -->
-    </div>
-  </div>
-</section>
-<!--== Page Title Area End ==-->
-
-<!--== Car List Area Start ==-->
 <section id="car-list-area" class="section-padding">
   <div class="container">
     <p id="notice"><%= notice %></p>
@@ -41,13 +15,11 @@
                 <div class="single-car-wrap">
                   <div class="car-list-thumb ">
                     <% if @cars[i].image.attached? %>
-                     <%=image_tag(@cars[i].image) %>
+                      <%=image_tag(@cars[i].image) %>
                     <%end %>
-
                   </div>
                   <br>
                   <div class="car-list-info without-bar">
-                    <br>
                     <h2><%= @cars[i].model %></h2>
                     <h5><%= @cars[i].rent %>$ Rent /per a day</h5>
                     <p><%= @cars[i].discription %></p>
@@ -57,10 +29,10 @@
                       <li>Diesel</li>
                     </ul>
                     <p class="rating">
-                      <i class="fa fa-star unmark"></i>
-                      <i class="fa fa-star unmark"></i>
-                      <i class="fa fa-star unmark"></i>
-                      <i class="fa fa-star unmark"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
                       <i class="fa fa-star unmark"></i>
                     </p>
                     <% if @cars[i].airconditioned %>
@@ -77,33 +49,22 @@
                       <div class="col-sm-2">
                         <%= link_to 'Details', @cars[i], class: "rent-btn" %>
                       </div>
-<!--                      <div class="col-sm-1"></div>-->
+                      <div class="col-sm-1"></div>
                       <%if logged_in?%>
                         <div class="col-sm-2">
                           <% if current_user.car_not_saved?(@cars[i].id) %>
-                            <%= link_to "Save", save_car_path(user: current_user, savedcar: @cars[i]), class: "rent-btn", method: :post %>
+                            <%= link_to "Save", save_car_path(user: current_user, car: @cars[i]), class: "rent-btn", method: :post %>
                           <% else %>
-                            <%= link_to "Unsave", saved_car_path(@cars[i]), method: :delete, class: "rent-btn" %>
+                            <%= link_to "Unsave", favourite_path(@cars[i]), method: :delete, class: "rent-btn" %>
                           <% end %>
                         </div>
-                        <div class="col-sm-2">
-                          <% if current_user.car_not_rented?(@cars[i].id) %>
-                            <%#= link_to "Rent", rent_car_path(user: current_user, rentedcar: @cars[i]), class: "rent-btn", method: :post %>
-                            <%= link_to "Rent", new_rented_car_path(rentedcar: @cars[i]), class: "rent-btn" %>
-                            <%#= link_to "Rent", new_rented_car_path, class: "rent-btn" %>
-                        <% else %>
-                            <%= link_to "Cancel", rented_car_path(@cars[i]), method: :delete, class: "rent-btn" %>
-                          <% end %>
-                        </div>
-
-
                       <%end %>
-<!--                      <div class="col-sm-1"></div>-->
+                      <div class="col-sm-1"></div>
                       <%if logged_in? && current_user.admin?%>
                         <div class="col-sm-2">
                           <%= link_to 'Edit', edit_car_path(@cars[i]), class: "rent-btn" %>
                         </div>
-<!--                        <div class="col-sm-1"></div>-->
+                        <div class="col-sm-1"></div>
                         <div class="col-sm-2">
                           <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
                         </div>
@@ -122,11 +83,9 @@
                       <% if @cars[i].image.attached? %>
                         <%=image_tag(@cars[i].image) %>
                       <%end %>
-
                     </div>
                     <br>
                     <div class="car-list-info without-bar">
-                      <br>
                       <h2><%= @cars[i].model %></h2>
                       <h5><%= @cars[i].rent %>$ Rent /per a day</h5>
                       <p><%= @cars[i].discription %></p>
@@ -136,10 +95,10 @@
                         <li>Diesel</li>
                       </ul>
                       <p class="rating">
-                        <i class="fa fa-star unmark"></i>
-                        <i class="fa fa-star unmark"></i>
-                        <i class="fa fa-star unmark"></i>
-                        <i class="fa fa-star unmark"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
                         <i class="fa fa-star unmark"></i>
                       </p>
                       <% if @cars[i].airconditioned %>
@@ -156,32 +115,23 @@
                         <div class="col-sm-2">
                           <%= link_to 'Details', @cars[i], class: "rent-btn" %>
                         </div>
-<!--                        <div class="col-sm-1"></div>-->
+                        <div class="col-sm-1"></div>
                         <%if logged_in?%>
                           <div class="col-sm-2">
                             <% if current_user.car_not_saved?(@cars[i].id) %>
-                              <%= link_to "Save", save_car_path(user: current_user, savedcar: @cars[i]), class: "rent-btn", method: :post %>
+                              <%= link_to "Save", save_car_path(user: current_user, car: @cars[i]), class: "rent-btn", method: :post %>
                             <% else %>
-                              <%= link_to "Unsave", saved_car_path(@cars[i]), method: :delete, class: "rent-btn" %>
-                            <% end %>
-                          </div>
-
-                          <div class="col-sm-2">
-                            <% if current_user.car_not_rented?(@cars[i].id) %>
-                              <%#= link_to "Rent", rent_car_path(user: current_user, rentedcar: @cars[i]), class: "rent-btn", method: :post %>
-                              <%= link_to "Rent", new_rented_car_path(rentedcar: @cars[i]), class: "rent-btn" %>
-
-                          <% else %>
-                              <%= link_to "Cancel", rented_car_path(@cars[i]), method: :delete, class: "rent-btn" %>
+                              <%= link_to "Unsave", favourite_path(@cars[i]), method: :delete,
+                                          data: {confirm: "Are you sure?"}, class: "rent-btn" %>
                             <% end %>
                           </div>
                         <%end %>
-<!--                        <div class="col-sm-1"></div>-->
+                        <div class="col-sm-1"></div>
                         <%if logged_in? && current_user.admin?%>
                           <div class="col-sm-2">
                             <%= link_to 'Edit', edit_car_path(@cars[i]), class: "rent-btn" %>
                           </div>
-<!--                          <div class="col-sm-1"></div>-->
+                          <div class="col-sm-1"></div>
                           <div class="col-sm-2">
                             <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
                           </div>
@@ -197,26 +147,8 @@
     </div>
     </div>
 
-    <!-- Page Pagination Start -->
-    <div class="page-pagi">
-      <nav aria-label="Page navigation example">
-        <div class="row">
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4">
-            <%= will_paginate %>
-          </div>
-          <div class="col-sm-4"></div>
-        </div>
-      </nav>
-    </div>
-    <!-- Page Pagination End -->
     </div>
     <!-- Car List Content End -->
     </div>
   </div>
 </section>
-<!--== Car List Area End ==-->
-
-</body>
-
-</html>
