--- a/car_rental/app/views/layouts/_header.html.erb
+++ b/car_rental/app/views/layouts/_header.html.erb
@@ -51,14 +51,14 @@
                        class: 'navbar-form navbar-left') do %>
             <div class="input-group">
               <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>
-              <select id= "attribute", name= "attribute" , class="form-control">
+              <select id="attribute" , name="attribute" , class="form-control">
                 <option value="None" id="None">--Select--</option>
                 <option value="Name" name="name">Model name</option>
                 <option value="Year" name="year">Year</option>
                 <option value="Price" name="price">Price</option>
               </select><br> <br>
               <div class="input-group-btn">
-                <%= button_tag "submit", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>
+                <%= button_tag "submit", :class => 'btn btn-info glyphicon glyphicon-search', :name => nil %>
               </div>
             </div>
           <% end %>
@@ -72,48 +72,45 @@
             <ul>
               <li><%= link_to 'Home', root_path %></li>
 
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">services</a></li>
+
               <li class="active"><a href="#">Cars</a>
                 <ul>
                   <li><%= link_to 'Cars', cars_path %></li>
-                  <%if logged_in? %>
+                  <% if logged_in? %>
                     <li><%= link_to "Favourite", saved_path %></li>
-                  <%end %>
+                    <li><%= link_to "My Rents",rent_car_path%></li>
+                    <% if current_user.admin? %>
+                      <li><%= link_to "Rented Cars", rented_cars_path %></li>
+                    <% end %>
+                  <% end %>
                 </ul>
               </li>
 
-              <li ><a href="index.html">Pages</a>
+              <li><a href="index.html">Pages</a>
                 <ul>
-                  <li><a href="package.html">Pricing</a></li>
-                  <li><a href="driver.html">Driver</a></li>
-                  <li><a href="faq.html">FAQ</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="help-desk.html">Help Desk</a></li>
+                  <li><%= link_to "About", about_path %></li>
+                  <li><%= link_to "Services", services_path %></li>
+                  <li><%= link_to "FAQ", fqa_path %></li>
                 </ul>
               </li>
-              <li><a href="#">Blog</a>
-                <ul>
-                  <li><a href="article.html">Blog Page</a></li>
-                  <li><a href="article-details.html">Blog Details</a></li>
-                </ul>
-              </li>
-              <li><a href="contact.html">Contact</a></li>
-              <%if logged_in? %>
+              <li><%= link_to "Blog", blog_path %></li>
 
-                <%if current_user.admin? %>
+              <li><%= link_to "Contact", contact_path %></li>
+              <% if logged_in? %>
+
+                <% if current_user.admin? %>
                   <li><a href="#">Settings</a>
                     <ul>
                       <li><%= link_to 'Add new car', new_car_path %></li>
                     </ul>
                   </li>
-                <%end %>
+                <% end %>
 
                 <li><%= link_to 'Logout', logout_path, method: :delete %></li>
 
-              <%else %>
-                <li><%= link_to 'Login', login_path%></li>
-            <%end %>
+              <% else %>
+                <li><%= link_to 'Login', login_path %></li>
+              <% end %>
 
             </ul>
           </nav>
