--- a/car_rental/app/views/users/add_cars_to_rent.html.erb
+++ b/car_rental/app/views/users/add_cars_to_rent.html.erb
@@ -50,25 +50,27 @@
                         <div class="display-table-cell">
                           <div class="car-list-info">
 
-                            <h2> <%= car.model %></h2>
+                            <div class="row">
+                              <div class="col-sm-8">
+                                <h3><%= car.model %></h3>
+                              </div>
+                              <div class="col-sm-4">
+                                <p class="rating">
+                                  <% car.calculate_car_rate(car.id) %>
+                                <div class="star-rating" data-score=<%= car.rank.ceil %>></div>
+                                </p>
+                              </div>
+                            </div>
                             <h5><%= car.rent %>$ Rent /per a day</h5>
                             <p><%= car.discription %></p>
                             <ul class="car-info-list">
                               <li>Air Condition</li>
-                              <li>Diesel</li>
-                              <li>Auto</li>
+                              <li>From: <%= rent.rent_from_date %></li>
+                              <li>To: <%= rent.rent_to_date %></li>
                             </ul>
-
-                            <p class="rating">
-
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star unmark"></i>
-                            </p>
                             <!--to delete the recipe from the saved-->
-                            <%= link_to "Cancel", rented_car_path(car), method: :delete, class: "rent-btn" %>
+                            <%= link_to 'Edit', edit_rented_car_path(:id =>rent.id), class: "rent-btn" %>
+                            <%#= link_to "Cancel", rent, method: :delete, class: "rent-btn" %>
                           </div>
                         </div>
                       </div>
@@ -201,3 +203,15 @@
 
         <% end %>
         </body>
+
+
+
+<script>
+    $('.star-rating').raty({
+        path: '/assets/',
+        readOnly: true,
+        score: function () {
+            return $(this).attr('data-score');
+        }
+    });
+</script>
