--- a/car_rental/app/views/cars/show.html.erb
+++ b/car_rental/app/views/cars/show.html.erb
@@ -84,21 +84,42 @@
               </div>
             </div>
 
+            <h4>Recent reviews (<%= @reviews.length %>)</h4>
 
-            <h4>All reviews</h4>
-            <% i = 0 %>
-            <% while i < @reviews.length %>
-              <ul class="recent-tips">
-                <li class="single-recent-tips">
-                  <div class="recent-tip-body">
-                    <h5> "<%= @reviews[i].content %>" </h5>
-                   ~User-id: <%= @reviews[i].user_id %>
-                   ~Rank: <%= @reviews[i].rank %>
-                  </div>
-                </li>
-              </ul>
-              <% i += 1 %>
-            <% end %>
+            <div class="single-sidebar">
+              <div class="sidebar-body">
+                <ul class="recent-tips">
+                  <% i = 0 %>
+                  <% while i < @reviews.length %>
+
+                  <li class="single-recent-tips">
+                        <div class="recent-tip-thum">
+                          <a href="#">
+                            <%= if (i==0)
+                                  image_tag("team/team-mem-1.png", alt: "JSOFT")
+                                elsif (i==1)
+                                  image_tag("team/team-mem-2.png", alt: "JSOFT")
+                                elsif (i==2)
+                                  image_tag("team/team-mem-3.png", alt: "JSOFT")
+                                elsif (i==3)
+                                  image_tag("team/team-mem-4.png", alt: "JSOFT")
+                                else
+                                  image_tag("team/team-mem-2.png", alt: "JSOFT")
+                                end%>
+                              </a>
+                        </div>
+
+                    <div class="recent-tip-body">
+                      <h5>"<%= @reviews[i].content %>"</h5>
+                      <span class="date">February 5, 2018</span>
+                    </div>
+                  </li>
+                    <% i += 1 %>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
+
 
 
             <div id="review-area" class="review-area">
@@ -108,15 +129,14 @@
                       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
                       <%= hidden_field_tag :car_id, @car.id %>
                       <div class="row">
-                        <div class="field">
+                        <div class="field" style="display: none">
                           <%= form.label :rank %>
                           <div id="star-rating">
                           </div>
                         </div>
                       </div>
                       <div class="input-submit">
-                        <button type="submit">Complete review</button>
-                        <button type="reset">Clear</button>
+                        <button type="submit">Start review</button>
                       </div>
                     <% end %>
               </div>
@@ -132,7 +152,6 @@
           <!-- Single Sidebar Start -->
           <div class="single-sidebar">
             <h3>For More Informations</h3>
-
             <div class="sidebar-body">
               <p><i class="fa fa-mobile"></i> +8801816 277 243</p>
               <p><i class="fa fa-clock-o"></i> Mon - Sat 8.00 - 18.00</p>
