--- a/car_rental/app/views/cars/index.html.erb
+++ b/car_rental/app/views/cars/index.html.erb
@@ -109,7 +109,7 @@
                         </div>
                         <!--                        <div class="col-sm-1"></div>-->
                         <div class="col-sm-2">
-                          <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "rent-btn" %>
+                          <%= link_to 'Delete', @cars[i], method: :delete, data: {confirm: 'Are you sure?'}, class: "btn" %>
                         </div>
                       <% end %>
                     </div>
